--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/chingalo/click-app-report#readme",
   "devDependencies": {
+    "@types/shelljs": "^0.8.9",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
   },
@@ -33,6 +34,10 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "lodash": "^4.17.21",
-    "prettier": "^2.4.1"
+    "moment": "^2.29.1",
+    "prettier": "^2.4.1",
+    "request": "^2.88.2",
+    "shelljs": "^0.8.4",
+    "xlsx": "^0.17.3"
   }
 }
