--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build-app": "tsc",
-    "format": "prettier --write \"*.ts\"  \"*/*.ts\" \"*/*/*.ts\"  \"*.json\"",
+    "format": "prettier --write   \"*/*.ts\" \"*/*/*.ts\"  \"*.json\"",
     "start": "ts-node ./src/index.ts",
     "dev": "ts-node-dev --respawn ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/chingalo/click-app-report#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.176",
     "@types/shelljs": "^0.8.9",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
