--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build-app": "tsc",
-    "format": "prettier --write   \"*/*.ts\" \"*/*/*.ts\"  \"*.json\"",
+    "format": "prettier --config .prettierrc --write   \"*/*.ts\" \"*/*/*.ts\"  \"*.json\"",
     "start": "ts-node ./src/index.ts",
     "dev": "ts-node-dev --respawn ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
