--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/chingalo/click-app-report#readme",
   "devDependencies": {
     "@types/lodash": "^4.14.176",
+    "@types/request": "^2.48.7",
     "@types/shelljs": "^0.8.9",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
